--- a/tenderhome.css
+++ b/tenderhome.css
@@ -155,6 +155,7 @@ li a:hover{
         }
         nav ul li img{
             height: 70px;
+            box-shadow: 10px 10px 25px black;
         }
         nav ul li a{
             font-size: 1.5rem;
@@ -162,117 +163,26 @@ li a:hover{
         nav ul li{
             padding-top: 20px;
         }
+        h1{
+            margin-top: 70px;
+        }
      }
-    /* @media screen and (max-width: 992px) {
+     @media screen and (max-width: 992px) {
         nav ul li img{
-            height: 70px;
+            height: 90px;
             box-shadow: 10px 10px 25px black;
+            
         }
         nav ul{
-            height: 70px;
+            height: 90px;
         }
         nav ul li{
             font-size: 2rem;
             padding-top: 20px;
         }
-        .container{
-            height: 20vh;
-        }
-        .container p{
-            padding-top: 40px;
-        }
-        body p{
-            font-size: 1.2rem;
-        }
-    }
-    @media screen and (max-width: 1200px) {
-        nav ul li img{
-            height: 80px;
-            box-shadow: 10px 10px 25px black;
+        h1{
+            margin-top: 100px;
         }
         
-        nav ul{
-            height: 80px;
-        }
-        nav ul li{
-            font-size: 2rem;
-            padding-top: 20px;
-        }
-        .container{
-            height: 30vh;
-        }
-        .container{
-            padding-top: 50px;
-        }
-        
+     }
     
-    }
-    @media screen and (max-width:1400px) {
-        nav ul li img{
-            height: 80px;
-            box-shadow: 10px 10px 25px black;
-        }
-        nav ul{
-            height: 80px;
-        }
-        nav ul li {
-            font-size: 2rem;
-            padding-top: 20px;
-        }
-        .container{
-            height: 30vh;
-            p{
-                padding-top: 50px;
-            }
-            h1{
-                padding-top: 50px;
-            }
-        }
-            
-        }
-        @media screen and (max-width: 1500px) {
-            .container p{
-                margin-bottom: 20px;
-                
-            }
-            
-        }
-        @media screen and (max-width:2000px) {
-            nav ul li img{
-                height: 100px;
-                box-shadow: 10px 10px 25px black;
-            }
-            nav ul{
-                height: 100px;
-            }
-            nav ul li {
-                font-size: 2.5rem;
-                padding-top: 20px;
-            }
-            .container{
-                height: 30vh;
-                p{
-                    padding-top: 50px;
-                    font-size: 2.5rem;
-                    padding-bottom: 50px;
-                }
-                h1{
-                    padding-top: 70px;
-                }
-            }
-            .container3{
-                p{
-                    font-size: 2.5rem;
-                }
-            }
-            .container2{
-                p{
-                    font-size: 2.5rem;
-                }
-                details{
-                    font-size: 2.5rem;
-                }
-            }
-        }
-
-     */ */ */
