--- a/tenderhome.css
+++ b/tenderhome.css
@@ -155,7 +155,7 @@ li a:hover{
         }
         nav ul li img{
             height: 70px;
-            box-shadow: 10px 10px 25px black;
+            box-shadow: 10px 10px 25px black; 
         }
         nav ul li a{
             font-size: 1.5rem;
@@ -169,19 +169,58 @@ li a:hover{
      }
      @media screen and (max-width: 992px) {
         nav ul li img{
-            height: 90px;
+            height: 70px;
             box-shadow: 10px 10px 25px black;
             
         }
         nav ul{
-            height: 90px;
+            height: 70px;
         }
         nav ul li{
             font-size: 2rem;
             padding-top: 20px;
         }
         h1{
-            margin-top: 100px;
+            padding-top: 90px;
+        }
+        
+     }
+     @media screen and (max-width:1200px) {
+        nav ul li img{
+            height: 90px;
+            box-shadow: 15px 15px 25px black;
+        }
+        nav ul{
+            height: 90px;
+        }
+        nav ul li{
+            font-size: 2.5rem;
+            padding-top: 15px;
+        }
+        h1{
+            padding-top: 90px;
+        }
+        p{
+            font-size: auto;
+        }
+        
+     }  @media screen and (max-width:1400px) {
+        nav ul li img{
+            height: 90px;
+            box-shadow: 15px 15px 25px black;
+        }
+        nav ul{
+            height: 90px;
+        }
+        nav ul li{
+            font-size: 2.5rem;
+            padding-top: 15px;
+        }
+        h1{
+            padding-top: 90px;
+        }
+        p{
+            font-size: auto;
         }
         
      }
