--- a/login.css
+++ b/login.css
@@ -18,8 +18,8 @@
     background-color: white;
     width: 60%;
     max-width: 340px;
-    height: 50%;
-    max-height: 50%;
+    height: auto;
+    max-height: auto;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -45,6 +45,7 @@
     
 
  }
+ 
  input{
     background-color: transparent;
     border: none;
@@ -71,9 +72,15 @@
     border-radius: 2rem;
     cursor: pointer;
  }
+ nav ul{
+   display: flex;
+   justify-content:flex-end;
+   padding-right: 10px;
+ }
  a{
     color: black;
     text-decoration: none;
+    
  }
  a:hover{
     color: red;
@@ -88,4 +95,95 @@
  }
  li{
     margin-top: 10px;
+ }
+ nav ul li img{
+   position: absolute;
+   top: 0%;
+   left: 0%;
+ }
+ /* media querries */
+ @media screen and (max-width: 576px){
+   nav ul li img{
+      height: 60px;
+      box-shadow: 15px 15px 25px black;
+  }
+  nav ul{
+      height: 60px;
+  }
+  nav ul li{
+      font-size: 1.5rem;
+      padding-top: 5px;
+  }
+  .formfield{
+   height: auto;
+  }
+   
+ }
+ @media screen and (max-width: 786px) {
+   nav ul{
+      height: 70px;
+  }
+  nav ul li img{
+      height: 70px;
+      box-shadow: 10px 10px 25px black; 
+  }
+  nav ul li a{
+      font-size: 1.5rem;
+  }
+  nav ul li{
+      padding-top: 20px;
+  }
+ }
+ @media screen and (max-width: 992px) {
+   nav ul li img{
+      height: 70px;
+      box-shadow: 10px 10px 25px black;
+      
+  }
+  nav ul{
+      height: 70px;
+  }
+  nav ul li{
+      font-size: 2rem;
+      padding-top: 20px;
+  }
+ }
+ @media screen and (max-width:1200px) {
+   nav ul li img{
+      height: 90px;
+      box-shadow: 15px 15px 25px black;
+  }
+  nav ul{
+      height: 90px;
+  }
+  nav ul li{
+      font-size: 2.5rem;
+      padding-top: 15px;
+  }
+ }
+ @media screen and (max-width: 1400px) {
+   nav ul li img{
+      height: 90px;
+      box-shadow: 15px 15px 25px black;
+  }
+  nav ul{
+      height: 90px;
+  }
+  nav ul li{
+      font-size: 2.5rem;
+      padding-top: 15px;
+  }
+ }
+ @media screen and (min-width: 1400px) {
+   nav ul li img{
+      height: 90px;
+      box-shadow: 15px 15px 25px black;
+  }
+  nav ul{
+      height: 90px;
+  }
+  nav ul li{
+      font-size: 2.5rem;
+      padding-top: 15px;
+  }
  }
